--- a/src/main/resources/templates/thymeleafEx/thymeleafEx01.html
+++ b/src/main/resources/templates/thymeleafEx/thymeleafEx01.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <titleTitle></titleTitle>
+    <title>Title</title>
 </head>
 <body>
     <p th:text="${data}">Hello Thymleaf!!</p>
