--- a/src/main/resources/templates/thymeleafEx/thymeleafEx04.html
+++ b/src/main/resources/templates/thymeleafEx/thymeleafEx04.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script>
+        /*window.onload = function () {
+            alert("ㅇㅇ");
+        }*/
+    </script>
 </head>
 <body>
     <h1>상품 리스트 출력 예제</h1>
@@ -19,8 +24,12 @@
         </thead>
         <tbody>
             <tr th:each="itemDto, status : ${itemDtoList}" >
-                <td th:if="${status.even}" th:text="짝수"></td>
-                <td th:unless="${status.even}" th:text="홀수"></td>
+                <td th:switch="${status.even}">
+                    <span th:case="true">짝수</span>
+                    <span th:case="false">홀수</span>
+                </td>
+                <!--<td th:if="${status.even}" th:text="짝수"></td>
+                <td th:unless="${status.even}" th:text="홀수"></td>-->
                 <!--<td th:text="${status.index}"></td>-->
                 <td th:text="${itemDto.itemNm}"></td>
                 <td th:text="${itemDto.itemDetail}"></td>
